refactor #PS-24: oauth 토큰 발급 기능 수정